src/main/java/com/example/product_store/authentication/errors/AccountAlreadyExistsException.java
package com.example.product_store.authentication.errors;

public class AccountAlreadyExistsException extends RuntimeException {

  public AccountAlreadyExistsException(String message) {
    super(message);
  }
}
